re PR debug/41170 (namespace DIE not generated when it contains only a typedef)

Fix for PR debug/41170

gcc/ChangeLog:
	PR debug/41770
	* dwarf2out.c (get_context_die): Declare this static function.
	(gen_type_die_with_usage): Make sure a DIE is a generated for
	the context of a typedef.

gcc/testsuite/ChangeLog:
	PR debug/41770
	* debug/dwarf2/namespace-1.C: New test.

From-SVN: r151138